# kiro.rs-admin

./: .dockerignore  .gitattributes  .gitignore  ACCOUNT_MARKETPLACE_PLATFORM_PLAN.md  CHANGELOG.md  Cargo.toml  Dockerfile.test  README.md  accounts.txt  config.example.json  docker-compose.test.yml
.github/workflows/: docker-build.yaml  release.yaml
admin-ui/: package.json  tsconfig.json  vite.config.ts
admin-ui/src/: App.tsx  bun-test.d.ts
admin-ui/src/api/: client-keys.ts  credentials.ts  error-snapshots.ts  image-budget.ts  model-mappings.ts  profit.ts  (+1 more)
deploy/test-proxy/: README.md  reload-bt-nginx.sh  rs-test.43-225-196-10.sslip.io.bootstrap.conf  rs-test.43-225-196-10.sslip.io.conf
docs/: 2026-07-13-ztest-identity-empty-response-analysis.md  2026-07-14-cctest-ztest-customer-impact.md  2026-07-14-cctest-ztest-implementation-status.md  2026-07-14-completed-work-summary.md  ztest-report-01KXB5DY-analysis.md  ztest-report-01KXB8K4-next-round.md
docs/analysis/: 2026-07-15-8991-production-two-hour-error-analysis.md
scripts/: error-snapshot-smoke.contract.test.ts  error-snapshot-smoke.sh  kiro_batch_login.py  kiro_batch_login_gui.py  kiro_enterprise_http_login.py  kiro_login_manager_gui.py  kiro_password_vault.py  release.contract.test.ts  release.ps1  repetition-guard.contract.test.ts  requirements-batch-login.txt  test-builder-contract.test.ts  test-deploy.sh
scripts/batch_login/: TASK_APIKEY_登录后自动建key.md  __init__.py  account_login_coordinator.py  account_manager_app.py  account_manager_service.py  account_repository.py  api_key_client.py  api_key_exporter.py  api_key_refresh.py  aws_fingerprint.py  aws_jwe.py  browser_flows.py  checkpoint.py  cli.py  credential_models.py  credential_store.py  enterprise_http.py  gui_app.py  gui_controller.py  gui_runtime.py  gui_settings.py  input_parser.py  local_auth.py  local_checkpoint.py  local_idc.py  local_microsoft.py  local_runner.py  login_manager_app.py  models.py  oidc_exporter.py  password_vault.py  proxy_chain.py  redaction.py  rs_client.py  rs_import.py  runner.py  ssh_tunnel.py  usage_client.py  worker_events.py
src/: http_client.rs  image_resize.rs  main.rs  token.rs
src/admin/: binary_update.rs  client_keys.rs  error.rs  error_snapshot_db.rs  error_snapshot_maintenance.rs  handlers.rs  middleware.rs  mod.rs  model_mapping.rs  model_profile_sync.rs  profit.rs  router.rs  service.rs  trace_db.rs  types.rs  usage_stats.rs
src/anthropic/: cache_metering.rs  converter.rs  document.rs  error_snapshot.rs  exact_output.rs  handlers.rs  identity.rs  middleware.rs  mod.rs  model_catalog.rs  model_profile.rs  model_profile_answer.rs  router.rs  stream.rs  structured_output.rs  thinking_signature.rs  tool_attempt.rs  tool_history.rs  tool_schema.rs  types.rs  usage.rs  websearch.rs  websearch_loop.rs
src/common/: error_snapshot.rs  mod.rs
src/kiro/: image_budget.rs  kiro_version.rs  mod.rs  model_capabilities.rs  model_catalog.rs  provider.rs  region.rs  token_manager.rs
src/model/: config.rs
src/openai/: handlers.rs  mod.rs  types.rs
src/wholesale/: health.rs  mod.rs  router.rs  service.rs  store.rs
tests/: test_docker_workflow.py
tests/batch_login/: test_account_login_coordinator.py  test_account_login_coordinator_apikey.py  test_account_manager_app.py  test_account_manager_service.py  test_account_repository.py  test_api_key_client.py  test_api_key_exporter.py  test_api_key_refresh.py  test_aws_fingerprint.py  test_aws_jwe.py  test_browser_contract.py  test_checkpoint.py  test_cli.py  test_coordinator_quota.py  test_credential_store.py  test_enterprise_cli.py  test_enterprise_http.py  test_gui_controller.py  test_gui_entrypoint.py  test_gui_settings.py  test_input_parser.py  test_local_auth.py  test_local_checkpoint.py  test_local_idc.py  test_local_microsoft.py  test_local_runner.py  test_local_runner_apikey.py  test_login_manager_app.py  test_oidc_exporter.py  test_password_vault.py  test_proxy_chain.py  test_quota_repository.py  test_redaction.py  test_rs_client.py  test_rs_import.py  test_runner.py  test_ssh_tunnel.py  test_usage_client.py
tests/release/: release_script_tests.ps1
(+180 files in other folders)
