[package]
name = "kiro-rs"
version = "0.9.2"
edition = "2024"

[features]
default = ["native-tls"]
native-tls = ["reqwest/native-tls-vendored"]

[profile.release]
lto = "thin"
codegen-units = 16
strip = true

[dependencies]
atomicwrites = "0.4"
axum = "0.8"
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["stream", "json", "socks", "rustls-tls-webpki-roots", "rustls-tls-native-roots", "http2", "system-proxy", "charset"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
http = "1.0"
httpdate = "1"
futures = "0.3"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.10", features = ["v1", "v4", "fast-rng"] }
fastrand = "2"
sha2 = "0.10"
hex = "0.4"
crc = "3"           # CRC32C 璁＄畻
bytes = "1"         # 楂樻晥鐨勫瓧鑺傜紦鍐插尯
tower-http = { version = "0.6", features = ["cors"] }
clap = { version = "4.5", features = ["derive"] }
urlencoding = "2"
parking_lot = "0.12"  # 楂樻€ц兘鍚屾鍘熻
# Image resize for inbound user/MCP images so AWS Q stays within request size
# limit. Pure-Rust, no C deps. PNG/JPEG/WebP/GIF only 鈥?keeps build slim.
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "webp", "gif"] }
base64 = "0.22"
pdf-extract = "0.12"
zstd = "0.13"
fs2 = "0.4"
thiserror = "1"
subtle = "2.6"        # 甯搁噺鏃堕棿姣旇緝锛堥槻姝㈡椂搴忔敾鍑伙級
rust-embed = "8"      # 宓屽叆闈欐€佹枃浠?
mime_guess = "2"      # MIME 绫诲瀷鎺ㄦ柇
flate2 = "1"        # tar.gz 瑙ｅ帇锛堝湪绾挎洿鏂帮級
tar = "0.4"         # tar 瑙ｆ瀽锛堝湪绾挎洿鏂帮級
zip = { version = "2", default-features = false, features = ["deflate"] }  # zip 瑙ｅ帇锛圵indows 鍦ㄧ嚎鏇存柊锛?
rusqlite = { version = "0.32", features = ["bundled"] }  # 璇锋眰閾捐矾杩借釜鎸佷箙鍖栵紙鑷甫 SQLite 婧愮爜锛?

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
