[package]
name = "kiro-rs"
version = "0.9.13"
edition = "2024"

[features]
default = ["native-tls"]
native-tls = ["reqwest/native-tls-vendored"]

[profile.release]
lto = "thin"
codegen-units = 16
strip = true

[dependencies]
atomicwrites = "0.4"
axum = "0.8"
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["stream", "json", "socks", "rustls-tls-webpki-roots", "rustls-tls-native-roots", "http2", "system-proxy", "charset"] }
regex = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
http = "1.0"
httpdate = "1"
futures = "0.3"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.10", features = ["v1", "v4", "fast-rng"] }
fastrand = "2"
sha2 = "0.10"
hex = "0.4"
crc = "3"           # CRC32C з’Ғпј„з•»
bytes = "1"         # жҘӮжЁ»жҷҘйҗЁеӢ«з“§й‘әеӮңзҙҰйҚҗжҸ’е°Ҝ
tower-http = { version = "0.6", features = ["cors"] }
clap = { version = "4.5", features = ["derive"] }
urlencoding = "2"
parking_lot = "0.12"  # жҘӮжЁ»вӮ¬СҶе…ҳйҚҡеұҫо„һйҚҳзҶ»оҮў
# Image resize for inbound user/MCP images so AWS Q stays within request size
# limit. Pure-Rust, no C deps. PNG/JPEG/WebP/GIF only йҲҘ?keeps build slim.
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "webp", "gif"] }
base64 = "0.22"
pdf-extract = "0.12"
zstd = "0.13"
fs2 = "0.4"
thiserror = "1"
subtle = "2.6"        # з”ҜжҗҒеҷәйҸғе •жЈҝе§Јж—Үз·қй”ӣе Ҙж§»е§қгҲЎжӨӮжҗҙеҝ”ж•ҫйҚ‘дјҷзҙҡ
rust-embed = "8"      # е®“еұҪеҸҶй—Ҳж¬җвӮ¬дҪ№жһғжө ?
mime_guess = "2"      # MIME з»«иҜІзҖ·йҺәг„ҰжҹҮ
flate2 = "1"        # tar.gz з‘ҷпҪ…еёҮй”ӣе қж№Әз»ҫжҢҺжҙҝйҸӮеё®зҙҡ
tar = "0.4"         # tar з‘ҷпҪҶзҖҪй”ӣе қж№Әз»ҫжҢҺжҙҝйҸӮеё®зҙҡ
zip = { version = "2", default-features = false, features = ["deflate"] }  # zip з‘ҷпҪ…еёҮй”ӣеңөindows йҚҰг„§еҡҺйҸҮеӯҳжҹҠй”ӣ?
rusqlite = { version = "0.32", features = ["bundled"] }  # з’Үй”Ӣзң°й–ҫжҚҗзҹҫжқ©еҖҹйҮңйҺёдҪ·з®ҷйҚ–ж өзҙҷй‘·оҒ„з”« SQLite е©§ж„®зҲңй”ӣ?

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
